<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    <item
        android:id="@+id/action_settings"
        android:title="Ajustes"
        android:orderInCategory="100"
        app:showAsAction="never" />
    -->
    <item
        android:id="@+id/action_logout"
        android:title="Cerrar Sesión"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:title="Salir"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
